implementazione salvataggio della partita. Refactoring e pulizia del codice