@@ -8,13 +8,18 @@ import it.unicam.cs.mpgc.rpg126598.service.PlayerCameraService;
 import it.unicam.cs.mpgc.rpg126598.service.PlayerMovementService;
 import it.unicam.cs.mpgc.rpg126598.strategy.AttackStrategy;
 import it.unicam.cs.mpgc.rpg126598.strategy.MeleeAttackStrategy;
+import javafx.animation.FadeTransition;
+import javafx.animation.PauseTransition;
 import javafx.fxml.FXML;
 import javafx.scene.Scene;
+import javafx.scene.control.Label;
 import javafx.scene.control.ProgressBar;
 import javafx.scene.image.ImageView;
 import javafx.scene.input.KeyCode;
 import javafx.scene.layout.Pane;
 import javafx.scene.layout.VBox;
+import javafx.stage.Stage;
+import javafx.util.Duration;
 
 import java.util.HashSet;
 import java.util.Set;
@@ -36,7 +41,14 @@ public class PlayerController {
     @FXML
     private VBox deathScreen;
 
-    private Player player;
+    @FXML
+    private VBox pauseMenu;
+
+    @FXML
+    private Label notificationLabel;
+
+
+    private final Player player;
     private PlayerMovementService movementService;
     private PlayerCameraService cameraService;
     private AttackStrategy attackStrategy;
@@ -44,6 +56,10 @@ public class PlayerController {
     private final Set<KeyCode> pressedKeys = new HashSet<>();
     private CombatService combatService;
     private EnemyMovementService enemyMovementService;
+    private GameController gameController;
+
+    private PauseTransition notificationTimer;
+    private boolean isPaused = false;
 
     private static final double HP_SCALE = 2.0;
 
@@ -54,11 +70,11 @@ public class PlayerController {
 
     @FXML
     public void initialize() {
-        if (hpBar != null && player != null) {
+        if (hpBar != null) {
             hpBar.setPrefWidth(player.getMaxHealth() * HP_SCALE);
             hpBar.setProgress(player.getMaxHealth() > 0 ? player.getHealth() / player.getMaxHealth() : 0);
         }
-        if (defenseBar != null && player != null) {
+        if (defenseBar != null) {
             defenseBar.setPrefWidth(player.getMaxDefense() * HP_SCALE);
             defenseBar.setProgress(player.getMaxDefense() > 0 ? player.getDefense() / player.getMaxDefense() : 0);
         }
@@ -90,21 +106,151 @@ public class PlayerController {
         this.enemyMovementService = enemyMovementService;
     }
 
+    public void setGameController(GameController gameController) {
+        this.gameController = gameController;
+    }
+
+    public GameController getGameController() {
+        return gameController;
+    }
+
     public void setupKeyListeners(Scene scene) {
         if (scene == null)
             return;
 
         scene.setOnKeyPressed(event -> {
+            if (event.getCode() == KeyCode.ESCAPE) {
+                togglePauseMenu();
+                event.consume();
+                return;
+            } else if (event.getCode() == KeyCode.F11) {
+                if (scene.getWindow() instanceof Stage stage) {
+                    stage.setFullScreen(!stage.isFullScreen());
+                    event.consume();
+                    return;
+                }
+            }
+
+            if (isPaused) {
+                // Scorciatoie rapide
+                if (event.getCode() == KeyCode.F5) {
+                    handleQuickSave();
+                } else if (event.getCode() == KeyCode.F9) {
+                    handleQuickLoad();
+                }
+                return;
+            }
+
             pressedKeys.add(event.getCode());
 
             if (event.getCode() == KeyCode.SPACE && !player.isDead()) {
                 handleAttack();
+            } else if (event.getCode() == KeyCode.F5) {
+                handleQuickSave();
+            } else if (event.getCode() == KeyCode.F9) {
+                handleQuickLoad();
             }
         });
 
         scene.setOnKeyReleased(event -> {
             pressedKeys.remove(event.getCode());
         });
+    }
+
+    public boolean isPaused() {
+        return isPaused;
+    }
+
+    public void togglePauseMenu() {
+        if (player.isDead()) return;
+        if (isPaused) {
+            resumeGame();
+        } else {
+            pauseGame();
+        }
+    }
+
+    public void pauseGame() {
+        isPaused = true;
+        pressedKeys.clear();
+        if (pauseMenu != null) {
+            pauseMenu.setVisible(true);
+        }
+        if (gameController != null) {
+            gameController.setPaused(true);
+        }
+    }
+
+    public void resumeGame() {
+        isPaused = false;
+        pressedKeys.clear();
+        if (pauseMenu != null) {
+            pauseMenu.setVisible(false);
+        }
+        if (gameController != null) {
+            gameController.setPaused(false);
+        }
+    }
+
+    @FXML
+    public void handleResumeGame() {
+        resumeGame();
+    }
+
+    @FXML
+    public void handleExitGame() {
+        javafx.application.Platform.exit();
+        System.exit(0);
+    }
+
+    @FXML
+    public void handleQuickSave() {
+        if (gameController != null) {
+            gameController.saveDefaultGame();
+        }
+    }
+
+    @FXML
+    public void handleQuickLoad() {
+        if (gameController != null) {
+            boolean loaded = gameController.loadDefaultGame();
+            if (loaded) {
+                resumeGame();
+            }
+        }
+    }
+
+    @FXML
+    public void handleLoadGame() {
+        if (gameController != null) {
+            boolean loaded = gameController.loadDefaultGame();
+            if (loaded) {
+                resumeGame();
+            }
+        }
+    }
+
+    public void showNotification(String message) {
+        if (notificationLabel == null) return;
+
+        notificationLabel.setText(message);
+        notificationLabel.setOpacity(1.0);
+        notificationLabel.toFront();
+        notificationLabel.setVisible(true);
+
+        if (notificationTimer != null) {
+            notificationTimer.stop();
+        }
+
+        notificationTimer = new PauseTransition(Duration.seconds(2.5));
+        notificationTimer.setOnFinished(e -> {
+            FadeTransition fade = new FadeTransition(Duration.millis(500), notificationLabel);
+            fade.setFromValue(1.0);
+            fade.setToValue(0.0);
+            fade.setOnFinished(fadeEvent -> notificationLabel.setVisible(false));
+            fade.play();
+        });
+        notificationTimer.play();
     }
 
     public void handleAttack() {
@@ -137,23 +283,23 @@ public class PlayerController {
     }
 
     public void updateHealthBar() {
-        if (hpBar == null || player == null) return;
+        if (hpBar == null) return;
         hpBar.setPrefWidth(player.getMaxHealth() * HP_SCALE);
 
         double progress = (player.getMaxHealth() > 0 && !player.isDead())
-                ? Math.max(0.0, Math.min(1.0, player.getHealth() / player.getMaxHealth()))
+                ? Math.clamp(player.getHealth() / player.getMaxHealth(), 0.0, 1.0)
                 : 0.0;
 
         hpBar.setProgress(progress);
     }
 
     public void updateDefenseBar() {
-        if (defenseBar == null || player == null) return;
+        if (defenseBar == null) return;
         if (player.getMaxDefense() > 0) {
             defenseBar.setPrefWidth(player.getMaxDefense() * HP_SCALE);
             double progress = (player.isDead() || player.getDefense() <= 0)
                     ? 0.0
-                    : Math.max(0.0, Math.min(1.0, player.getDefense() / player.getMaxDefense()));
+                    : Math.clamp(player.getDefense() / player.getMaxDefense(), 0.0, 1.0);
             defenseBar.setProgress(progress);
         } else {
             defenseBar.setProgress(0);
@@ -164,6 +310,9 @@ public class PlayerController {
         deathScreen.setVisible(true);
     }
 
+    public void hideDeathScreen() {
+        deathScreen.setVisible(false);
+    }
 
     public Player getPlayer() {
         return player;
